--- a/DQD/MainPage.xaml
+++ b/DQD/MainPage.xaml
@@ -410,11 +410,11 @@
                                Margin="0,15,5,5"
                                TextWrapping="WrapWholeWords">
                         <Run Text="待解决的问题：" FontSize="14"/><LineBreak/>
-                        <Run Text="1）所有评论加载存在问题" FontSize="12"/><LineBreak/>
-                        <Run Text="2）YouKu视频暂时无法支持" FontSize="12"/><LineBreak/>
-                        <Run Text="3）赛事集锦暂时无法支持" FontSize="12"/><LineBreak/>
-                        <Run Text="4）评论中的图片无法显示" FontSize="12"/><LineBreak/>
-                        <Run Text="5）登陆功能暂不支持" FontSize="12"/><LineBreak/>
+                        <Run Text="1）所有评论加载存在问题，会重复加载前30条" FontSize="12"/><LineBreak/>
+                        <Run Text="2）手机平台优酷暂时无法支持播放和跳转" FontSize="12"/><LineBreak/>
+                        <Run Text="3）赛事集锦暂时无法支持应用内播放，PC平台需要跳转到网页" FontSize="12"/><LineBreak/>
+                        <Run Text="4）评论中的图片无法显示，暂时没有解决办法" FontSize="12"/><LineBreak/>
+                        <Run Text="5）登陆功能暂不支持，官方登陆限制为扫码" FontSize="12"/><LineBreak/>
                         <LineBreak/>
                         <Run Text="上述部分问题，受限于懂球帝官网功能不完整，开发者可能暂时无法解决,希望不要因此给我一★问候(；′⌒`)♥" FontSize="12" FontWeight="SemiBold"/><LineBreak/>
                         <LineBreak/>
